--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <h1>Adam's Portfolio</h2>
         <h2>I am a web developer</h2>
         <hr/>
-        <h3><a href="Movie Ranking Project"></a></h3>
+        <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
         <img src="./assets/images/movie-ranking.png" height="200" />
-        <h3><a href="Birthday Invite Project"></a></h3>
+        <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
         <img src="./assets/images/birthday-invite.png" height="200" />
         <hr/>
         <h4><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a></h4>
